@@ -5,6 +5,9 @@ noinst_LTLIBRARIES = libLHAPDFInfo.la libLHAPDFPaths.la
 
 AM_CPPFLAGS += -I$(top_srcdir)/include -I$(prefix)/include
 AM_LDFLAGS += -L$(top_builddir)/src -L$(prefix)/lib -avoid-version
+if USING_MPI
+  AM_CPPFLAGS += -DHAVE_MPI=1
+endif
 
 libLHAPDF_la_SOURCES = \
   PDF.cc PDFSet.cc GridPDF.cc PDFInfo.cc \
@@ -12,7 +15,7 @@ libLHAPDF_la_SOURCES = \
   LogBilinearInterpolator.cc LogBicubicInterpolator.cc \
   ErrExtrapolator.cc NearestPointExtrapolator.cc  ContinuationExtrapolator.cc \
   AlphaS.cc AlphaS_Analytic.cc AlphaS_ODE.cc AlphaS_Ipol.cc \
-  Config.cc Factories.cc PDFIndex.cc Utils.cc
+  Config.cc Factories.cc PDFIndex.cc Utils.cc FileIO.cc
 
 libLHAPDFInfo_la_SOURCES = Info.cc
 libLHAPDFInfo_la_CPPFLAGS = -I$(srcdir)/yamlcpp -DYAMLCPP_API=3 -DYAML_NAMESPACE=LHAPDF_YAML $(AM_CPPFLAGS)
