@@ -8,6 +8,10 @@
 #include "LHAPDF/Config.h"
 #include <dirent.h>
 
+#ifdef HAVE_MPI
+#include <mpi.h>
+#endif
+
 namespace LHAPDF {
 
 
@@ -54,15 +58,18 @@ namespace LHAPDF {
     // Return cached list if valid
     if (!rtn.empty()) return rtn;
     // Otherwise this is the first time: populate the list
+#ifdef HAVE_MPI
+    if (MPI::COMM_WORLD.Get_rank()==0)
+#endif
     for (const string& p : paths()) {
-      if (!dir_exists(p)) continue;
+      if (!dir_exists(p,1)) continue;
       DIR* dir;
       struct dirent* ent;
       if ((dir = opendir(p.c_str())) != NULL) {
         while ((ent = readdir(dir)) != NULL) {
           const string d = ent->d_name;
           const string infopath = p / d / d + ".info";
-          if (file_exists(infopath)) {
+          if (file_exists(infopath,1)) {
             if (!contains(rtn, d)) {
               // cout << "@" << d << "@" << endl;
               rtn.push_back(d); //< add if a set with this name isn't already known
@@ -73,6 +80,27 @@ namespace LHAPDF {
       }
       sort(rtn.begin(), rtn.end());
     }
+#ifdef HAVE_MPI
+    if (MPI::COMM_WORLD.Get_rank()==0) {
+      std::string allrtn;
+      for (size_t i=0;i<rtn.size();++i) allrtn+="*"+rtn[i];
+      int nchar(allrtn.length());
+      MPI::COMM_WORLD.Bcast(&nchar,1,MPI_INT,0);
+      MPI::COMM_WORLD.Bcast(&allrtn[0],nchar,MPI_CHAR,0);
+    }
+    else {
+      int nchar;
+      MPI::COMM_WORLD.Bcast(&nchar,1,MPI_INT,0);
+      std::string allrtn(nchar,' ');
+      MPI::COMM_WORLD.Bcast(&allrtn[0],nchar,MPI_CHAR,0);
+      size_t bpos(allrtn.find('*'));
+      while (bpos<allrtn.length()) {
+      	size_t epos(std::min(allrtn.length(),allrtn.find('*',bpos+1)));
+      	rtn.push_back(allrtn.substr(bpos+1,epos-bpos-1));
+      	bpos=epos;
+      }
+    }
+#endif
     return rtn;
   }
 
