@@ -1,3 +1,9 @@
+2019-05-02  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Adapt MPI file-reading patch from Stefan Hoeche. Enable with --enable-mpi to configure.
+
+	* Rewrite the lhapdf data-manager script to use argparse, for compatibility with Python 3.
+
 2019-03-29  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Apply compiler optimisation bypass "volatile" hack to default
@@ -13,8 +19,7 @@
 
 2018-10-24  Graeme Watt  <graeme.watt@durham.ac.uk>
 
-	* Update lhapdf download script for new HepForge base URL and
-	don't require the presence of Content-Length in HTTP header.
+	* Don't require the presence of Content-Length in HTTP header.
 
 2018-10-19  Andy Buckley  <andy.buckley@cern.ch>
 
